@@ -2,5 +2,5 @@
  * For standalone build;
  * you should NEVER use this for official TeX Live!
  */
-#define VERSION "DEVEL"
+#define VERSION "20181006"
 #define TL_VERSION "standalone"
