@@ -616,7 +616,9 @@ error:                  fprintf(stderr, "Error in parameter %s\n", argv[i]);
       }
 skip: ;
     }
-    /* now, i = (number of optional argument) + 1 */
+    /* now, i = (number of optional arguments) + 1
+       cf.  argc = (number of all arguments) + 1
+        {argv[0] is the program name itself} ^^^ */
 
     if(!f_mode) f_mode = EXE2INDEP; /* default mode */
 
@@ -635,11 +637,14 @@ skip: ;
             error("Too long filename");
     }
 
-    switch(argc - i){
+    switch(argc - i){ /* number of non-optional arguments */
         case 0:
             if(fp_in == NULL)
+                /* infile not given, empty stdin; nothing I can do */
                 usage(1);
             if(fp_out == NULL){
+                /* outfile not given, free stdout;
+                   binary cannot be written, text is fine */
                 if((f_mode & EXE2INDEP) || f_mode == EXE2DVI)
                     usage(1);
                 fp_out = stdout;
@@ -647,26 +652,39 @@ skip: ;
             break;
 
         case 1:
-            if(fnum == 2)
+            if(fnum == 2)   /* non-empty stdin, redirected stdout */
+                /* [TODO] ??? */
                 usage(1);
-            if(!fnum){
+            if(!fnum){  /* empty stdin, free stdout */
+                /* if EXE2DVI, the only argument might be outfile,
+                   but no input available; nothing I can do */
+                if(f_mode == EXE2DVI)
+                    usage(1);
+                /* otherwise, the only argument should be infile */
                 strcpy(infile, argv[argc-1]);
+                /* outfile not given;
+                   nonetheless binary should be written to a file,
+                   text is fine with free stdout */
                 if((f_mode & EXE2INDEP))
                     strcpy(outfile, argv[argc-1]);
-                else if(f_mode == EXE2DVI)
-                    usage(1);
                 else
                     fp_out = stdout;
-            }else
+            }else   /* if fp_out == NULL, free stdout; otherwise empty stdin */
+                /* [TODO] to be confirmed
+                      if non-empty stdin, the only argument = outfile
+                        (input is taken from stdin)
+                      if redirected stdout, the only argument = infile
+                        (output goes to stdout for EXE2DVI, overwrite for EXE2INDEP) */
                 strcpy((fp_out == NULL)?outfile:infile, argv[argc-1]);
             break;
 
         case 2:
             if(fp_in == NULL){
+                /* prioritize filename arguments */
                 strcpy(infile, argv[argc-2]);
                 strcpy(outfile, argv[argc-1]);
                 break;
-            }
+            }   /* else non-empty stdin already given, confused! */
         default:
             usage(1);
     }
@@ -683,6 +701,8 @@ skip: ;
     }
                         /* -x : text -> DVI */
     if(f_mode == EXE2DVI){
+        /* use infile if given, otherwise use existing fp_in (= non-empty stdin)
+           note that fp_in and infile are exclusive (already checked above) */
         if(fp_in == NULL){
             fp_in = fopen(infile, READ_TEXT);
             if(fp_in == NULL){
@@ -690,7 +710,8 @@ skip: ;
                 exit(1);
             }
         }
-        if(fp_out == NULL){
+        /* [TODO] I'd like to use outfile if given */
+        if(fp_out == NULL || outfile){
             len = strlen(outfile);
             if(len < 4 || StrCmp(outfile + len - 4, ".dvi"))
                 strcat(outfile, ".dvi");
@@ -713,7 +734,8 @@ skip: ;
         dvi_info.file_name = infile;
     }
 
-    if(i == argc - 1){
+    /* [TODO] comments not added yet */
+    if(argc - i == 1){
         if((f_mode & EXE2INDEP) && !fnum){
 #ifdef UNIX
             static char tmpfile[] = "/tmp/dvispcXXXXXX";
@@ -736,7 +758,7 @@ same:       strcpy(outfile, infile);
 #endif
             f_overwrite = 1;
         }
-    }else if(i == argc - 2){
+    }else if(argc - i == 2){
 #ifdef UNIX
         struct stat infstat, outfstat;
 #endif
@@ -756,7 +778,8 @@ same:       strcpy(outfile, infile);
         fprintf(stderr, "Cannot open %s\n", infile);
         exit(1);
     }
-    if(fp_out == NULL){
+    /* [TODO] I'd like to use outfile if given */
+    if(fp_out == NULL || outfile){
         if(!*outfile)
             fp_out = (f_mode == EXE2TEXT || f_mode == EXE2SPECIAL)?stdout:stderr;
         else if((f_mode & EXE2INDEP))
